--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +7,26 @@
     <title>Document</title>
   </head>
   <body>
+    <h1 class="title">IP Cheker</h1>
+    <div class="wrapper">
+      <span class="error"></span>
+      <div class="input-container">
+        <input
+          id="search"
+          name="search"
+          type="text"
+          placeholder="___.___.___.___"
+        />
+
+        <button>Search</button>
+      </div>
+    </div>
+    <div id="map" class="map"></div>
+
+    <script
+      src="https://api-maps.yandex.ru/v3/?apikey=3bd5b897-162b-40be-a22c-588e442c8a30&lang=en_EN"
+      type="text/javascript"
+    ></script>
     <script src="app.js"></script>
   </body>
 </html>
